Fixing bugs and styling

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,7 @@
 #container-header {
   width: 100vw;
   height: 4rem;
-  padding: 6px;
+  padding: 1.25rem;
   background: #f4f4f4;
   display: flex;
   justify-content: center;
