--- a/src/components/Slide/style.css
+++ b/src/components/Slide/style.css
@@ -20,6 +20,9 @@
   font-family: "Kaushan Script", cursive;
   font-size: 60px;
   color: #1b75bc;
+  width: 270px;
+  height: 50px;
+  overflow-y: hidden;
   margin: 0;
   padding-left: 1.2765rem;
 }
