--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -13,3 +13,13 @@
   justify-content: center;
   align-items: center;
 }
+.spinner-home {
+  width: 120px;
+  height: auto;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
